<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green1" >

    <!-- Background Image with low opacity -->
    <ImageView
        android:id="@+id/background_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.12"
        android:scaleType="centerCrop"
        android:rotation="90"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arduinopic1"
        tools:ignore="ContentDescription" />

    <!-- Top App Bar (Header) -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_coner2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <TextView
                android:id="@+id/app_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="HOME"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/profile_icon"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:src="@drawable/log_face_foreground"
                tools:ignore="ContentDescription" />

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Scrollable Content Area -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center_horizontal">

            <!-- "Arduino Open-Source Community" Logo -->
            <!--<TextView
                android:id="@+id/app1_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/community"
                android:layout_gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/green6" />
            &lt;!&ndash; "Arduino" section title &ndash;&gt;
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/materialToolbar6"
                android:layout_width="match_parent"
                android:layout_height="306dp"
                android:layout_marginTop="16dp"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.144" />-->

            <TextView
                android:id="@+id/arduino_section_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/arduino"
                android:textColor="@color/green6"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />

            <!-- Arduino board image -->
            <ImageView
                android:id="@+id/arduino_board_image"
                android:layout_width="400dp"
                android:layout_height="250dp"
                android:layout_marginTop="16dp"
                android:scaleType="center"
                android:layout_gravity="center"
                app:srcCompat="@drawable/arduinobg1"
                tools:ignore="ContentDescription" />

            <!-- "What is an Arduino?" sub-heading -->

            <TextView
                android:id="@+id/what_is_arduino_title"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/what_is_an_arduino"
                android:textColor="@color/green6"
                android:textAlignment="center"
                android:textSize="28sp"
                android:textStyle="bold" />

            <!-- Arduino description text -->
            <TextView
                android:id="@+id/arduino_description"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/ard_des"
                android:textColor="@color/green6"
                android:textAlignment="center"
                android:textSize="23sp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <!-- Bottom Navigation Bar -->

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar3"
        android:layout_width="411dp"
        android:layout_height="18dp"
        android:background="@color/green7"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/aibot"
        android:layout_width="51dp"
        android:layout_height="52dp"
        android:backgroundTint="@color/green7"
        android:foreground="@drawable/aibotlogo"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation_bar"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent" />


    <LinearLayout
        android:id="@+id/bottom_navigation_bar"
        android:layout_width="0dp"
        android:layout_height="81dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/round_coner_color_green7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Navigation Icons -->
        <ImageView
            android:id="@+id/nav_icon_1"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/componentbg1"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/nav_icon_2"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/projbg2"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/nav_icon_3"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/tinkercadbg1"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/nav_icon_4"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/chartbg1"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/nav_icon_5"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/buycomponentsbg1"
            tools:ignore="ContentDescription" />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
